Fixed background foreground color contrast

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -36,7 +36,3 @@ section {
 p {
   line-height: 1.3;
 }
-
-li {
-  font-family: 'Montserrat', 'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', sans-serif;
-}
